# footprint-ml

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: basic_classification.py  batch_classification.py  custom_training.py  pulse_integration.py
scripts/: export_training_data.py  train_bundled_model.py
src/footprint_ml/: __init__.py  _compat.py  classifier.py  encoders.py  features.py  geometry.py  model_registry.py  trainer.py  types.py
tests/: test_classifier.py  test_compat.py  test_encoders.py  test_features.py  test_geometry.py  test_integration.py  test_model_registry.py  test_trainer.py  test_types.py
